[package]
name = "deneme"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros", "net", "io-util"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1.29"
async-trait = "0.1"
