[package]
name = "server"
version = "0.1.0"
edition = "2018"

[features]
default = ["tokio/rt-multi-thread", "num_cpus"]

[dependencies]
config-compiler = { path = "../config-compiler" }
proxy = { path = "../network-utils/proxy" }
middlewares = { path = "../network-utils/middlewares" }
tokio = { version = "1.12.0", features = ["net", "macros", "io-util", "rt"] }
num_cpus = { version = "1", optional = true }

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.3.2"
